# succinct-playground

./: LICENSE  README.md  circle.yml  stack.yaml  succinct-playground.cabal
app/: Main.hs
