name:                succinct-playground
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/succinct-playground#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010

  exposed-modules:
          Lib

  build-depends:
        amazonka      == 1.3.5
      , amazonka-core == 1.3.5
      , amazonka-dynamodb == 1.3.5
      , amazonka-ec2 == 1.3.5
      , amazonka-s3 == 1.3.5
      , amazonka-sqs == 1.3.5
      , base          >= 4.7 && < 5
      , bytestring
      , classy-prelude
      , conduit
      , conduit-extra
      , exceptions
      , lens
      , semigroups
      , transformers
      , text

executable succinct-playground-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                    , succinct-playground
                    , amazonka          == 1.3.5
                    , amazonka-core     == 1.3.5
                    , amazonka-dynamodb == 1.3.5
                    , amazonka-ec2      == 1.3.5
                    , amazonka-s3       == 1.3.5
                    , amazonka-sqs      == 1.3.5
                    , base              >= 4.7 && < 5
                    , bytestring
                    , classy-prelude
                    , conduit
                    , conduit-extra
                    , exceptions
                    , lens
                    , semigroups
                    , transformers
                    , text
  default-language:    Haskell2010

Test-Suite succinct-playground-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , succinct-playground
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/haskell-works/succinct-playground
